"""
:Author: PDT
:Since: 2020/06/12

This is the module of a ``plugin``. It is an interface for future plugins.
# TODO
"""


class Plugin:
    """This is a plugin."""

    def __init__(self):
        """Create"""

    # TODO
